# scaling-ecg-models

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
configs/: basic.yaml  basic2.yaml  basic3.yaml
notebooks/: dataset_face.ipynb  dataset_physionet.ipynb  design_space_a.ipynb  eval_baseline.ipynb  eval_lr_wd.ipynb  model_physionet.ipynb  physionet_design_space.db  prep_scaling.ipynb  train_face.ipynb
scaling/: augmentations.py  datasets.py  loss.py  main.py  metrics.py  scale_regnet.py  train.py
scaling/datasets/: physionet.py
scaling/models/: convnext.py  model_factory.py  module.py  regnet.py  resnet.py  utils.py  vit.py
scaling/preprocessing/: preprocess.py
scaling/preprocessing/physionet/: download.py  physionet.py
src/: augmentations.py  datasets.py  grid.py  model.py
src/convnext_scaling/: augmentations.py  grid.py  scale_regnet.py
src/convnext_scaling/datasets/: physionet.py
src/convnext_scaling/models/: getemed.py  model_factory.py  module.py  regnet.py  resnet.py  vit.py
src/preprocessing/: download.py  physionet.py  preprocess.py
src/preprocessing/face/: download.py
src/preprocessing/physionet/: physionet.py
